# ml-classifiers-and-experiments-py

./: .gitignore  .pre-commit-config.yaml  README.md
LLM-from-scratch/: Makefile  README.md  pyproject.toml
LLM-from-scratch/src/: activation_functions.py  create_vocab.py  gpt_dataloader.py  gpt_model.py  main.py  multihead_attention.py  pretraining.py  self_attention.py  simple_tokenizer.py  token_embedding.py  training.py  utils.py
LLM-from-scratch/src/external_code/: gpt_download.py  pytorch1.ipynb  pytorch2.ipynb
RLHF-techniques/: README.md
RLHF-techniques/src/: bt_reward_model.py  outcome_reward_model.py  process_reward_model.py  proximal_policy_optimization.py
classic_ML_classifiers/: README.md
