[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "A nice experiment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tiktoken",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".venv", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N801"]

[tool.ruff.lint.per-file-ignores]
"src/gpt_model.py" = ["E402", "F811", "F821", "W291"]

[tool.ruff.format]
quote-style = "double"
